# radhat

./: .env.example  .gitignore  README.md  deployments.example.json  deployments.json  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
app/: .env.example  .gitignore  .gitkeep  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
app/src/: App.tsx  index.css  main.tsx  wagmi.ts
app/src/api/: client.test.ts  client.ts  types.test.ts  types.ts
app/src/components/: ConnectWallet.tsx  CreateDepositButton.tsx  DepositsTable.test.tsx  DepositsTable.tsx  RouteButton.tsx  StatusBadge.test.tsx  StatusBadge.tsx  index.ts
app/src/components/ui/: MinimalHero.tsx
app/src/test/: utils.tsx
app/src/test/mocks/: handlers.ts
contracts/: .gitkeep  DeterministicProxyDeployer.sol  FundRouter.sol  FundRouterStorage.sol
contracts/test/: MockERC20.sol
rust-backend/: .env.example  .gitkeep  Cargo.toml  Dockerfile  railway.toml
rust-backend/src/: config.rs  create2.rs  db.rs  error.rs  main.rs  models.rs  rpc.rs
rust-backend/src/routes/: deposit.rs  health.rs  mod.rs  router.rs
scripts/: .gitkeep  deploy.ts  sync-deployments.sh
test/: .gitkeep  DeterministicProxyDeployer.test.ts  FundRouter.test.ts  FundRouterStorage.test.ts
