[package]
name = "radhat-backend"
version = "0.1.0"
edition = "2021"
description = "RADHAT - Deterministic CREATE2 Deposit Proxy Backend"
authors = ["LachPawel"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Ethereum
alloy-primitives = { version = "0.8", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Hex encoding
hex = "0.4"
